doesn't quite apply the event listener on the desired element, but close.

--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <script type='text/javascript' src='./src/app.js'></script>
 </head>
 </html>
+<script type='text/javascript' > magog(app() ); </script>
