--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <script type='text/javascript' src='./src/app.js'></script>
 </head>
 </html>
-<script type='text/javascript' > magog(app() ); </script>
+<script type='text/javascript' > magog(app({}) ); </script>
